feat: implement GraphQL support for user management and enhance user retrieval with pagination